working on asthetic changes to projects section and text align issues

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image:url("../images/back3.jpg");
+    background-image: url("../images/back3.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -114,6 +114,12 @@ div#persanchor {
 
 }
 
+#infogphoto {
+    width: 280px;
+    height: 200px;
+}
+
+
 #aboutpar {
     margin: 10%;
     margin-top: 0;
@@ -170,6 +176,15 @@ div.footer {
     opacity: 0.95;
 }
 
+#descrip {
+    margin:10%;
+    margin-top:0;
+    font-family: 'Lato', sans-serif;
+    color:black;
+    text-align: justify;
+    max-width: 80%;
+}
+
 @media (max-width:650px) {
     #bodycontainer {
         width: 100%;
@@ -183,6 +198,16 @@ div.footer {
         width: 80%;
     }
     div.caption#safe {
+        margin: 10%;
+        margin-top:0;
+        font-family: 'Lato', sans-serif;
+        font-size: 90%;
+        color: black;
+        text-align: justify;
+        max-width: 80%;
+    }
+
+    div.caption#river {
         margin: 10%;
         margin-top:0;
         font-family: 'Lato', sans-serif;
